kube-system/authelia/referencegrant.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-extauth-from-namespaces
  namespace: kube-system
spec:
  from:
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: default
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: monitoring
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: social
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: rook-ceph
  to:
    - group: ""
      kind: Service
      name: authelia
